tests/paczka1/small_fuzzy/28755808.err
Error in line 7: b5OEELmmkT S164 18,5
Error in line 10: AUN8YlCM A517 80,3
Error in line 12: AUN8YlCM S164 4,9
